# VecMat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cpp  speed_test.cpp  vec.hpp  vecNd.hpp  vectorNd.hpp
references/: with_blas.txt  with_blas_20230407.txt  with_blas_20230412.txt  with_blas_20230416.txt  with_blas_with_MKL_20230707.txt  with_blas_wo_MKL_20230707.txt  without_blas.txt
test/: CMakeLists.txt  test001.cpp
